--- a/style.css
+++ b/style.css
@@ -1,1 +1,55 @@
+.custom-btn {
+   margin: 0;
+  padding: 0;
+	background-color: white;
+  border: 2px solid black;
+	border-radius: 20px;
+  height: 50px;
+	width: 200px;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+  color: black;
 
+}
+a {
+  font-family: Cabin;
+}
+h2 {
+  font-family: Cabin;
+}
+p {
+  font-family: Cabin;
+}
+h1 {
+  font-family: Cabin;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: whitesmoke;
+}
